tests/rgs/valid/condition_complex.rgs
ACTION run.
EVENT  spotted ENVIRONMENT.
CONDITION a MYSELF.
CONDITION b MYSELF.
CONDITION c MYSELF.
CONDITION d MYSELF.

DURING ALWAYS:
    WHEN spotted ENVIRONMENT IF (a MYSELF OR b MYSELF) AND NOT (c MYSELF OR d MYSELF):
        DO run.
