tests/rgs/semantic_errors/undeclared_event.rgs
STORY a PRIORITY 1.
ACTION run.
EVENT spotted ENVIRONMENT.
DURING a:
    WHEN exploded ENVIRONMENT:
        DO run.
